Clean up tests, commennts

--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\",\"Flowchart1.xaml\",\"Sequence.xaml\",\"SeqLink.xaml\",\"SeqSearchBar.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"SeqLink.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
